apps/prod/public/dummy200/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: dummy200
  labels:
    app.kubernetes.io/name: dummy200
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: dummy200
      app.kubernetes.io/component: app
  template:
    metadata:
      name: dummy200
      labels:
        app.kubernetes.io/name: dummy200
        app.kubernetes.io/component: app
    spec:
      volumes:
        - name: app
          configMap:
            name: app
      containers:
        - name: nginx
          image: ghcr.io/johnnyjoy/nginx-micro:1.31.3-upx
          volumeMounts:
            - name: app
              mountPath: "/conf/nginx.conf"
              subPath: nginx.conf
              readOnly: true

          startupProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
