apps/prod/public/dummy200/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: dummy200
  labels:
    app.kubernetes.io/name: dummy200
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: dummy200
    app.kubernetes.io/component: app
  ports:
    - name: http
      protocol: TCP
      port: 7585
      targetPort: 80
  type: ClusterIP
